--- a/site/css/styles.css
+++ b/site/css/styles.css
@@ -4,7 +4,7 @@ sumar a la base */
 
 @font-face{
     font-family: 'Industry';
-    src: url("/static/fonts/Industry.ttf") format("truetype");
+    src: url("../static/fonts/Industry.ttf") format("truetype");
 }
 
 /* Base */
@@ -463,7 +463,7 @@ fin de base */
     flex-direction: column;
     align-items: center;
     min-height: 100vh;
-    background-image: url('/static/img/lupuloOscuro.jpg');
+    background-image: url('../static/img/lupuloOscuro.jpg');
 }
 
 
