--- a/site/css/styles.css
+++ b/site/css/styles.css
@@ -100,7 +100,7 @@ flex:1;
 }
 
 .buscador__formulario--input{
-    font-size: 1.6rem;
+    font-size: 1.4rem;
     margin-left: 4%;
     color: white;
     text-align: left;
@@ -123,7 +123,7 @@ flex:1;
     width: 3.6vh;
 }
 
-/* MENU */
+/* MENU BURGUER*/
 
 .menuHamburguesa{
     display: flex;
