--- a/site/css/styles.css
+++ b/site/css/styles.css
@@ -469,8 +469,8 @@ fin de base */
 }
 
 .log--submit{
-    position: absolute;
-    bottom: 10%;
+    position: relative;
+    bottom: -50%;
     background-color: grey;
     width: 100%;
     height: 7vh;
