--- a/site/css/styles.css
+++ b/site/css/styles.css
@@ -522,11 +522,12 @@ fin de base */
 .cont__snos{
     position: relative;
     display: flex;
-    justify-content: space-evenly;
+    justify-content: space-between;
     flex-direction: column;
     align-items: center;
-    min-height: 100vh;
+    min-height: 70vh;
     background-image: url('../static/img/lupuloOscuro.jpg');
+    padding: 2%;
 }
 
 
@@ -554,8 +555,8 @@ fin de base */
 }
 
 .btn--volver{
-    position: absolute;
-    bottom: 10%;
+    /* position: absolute;
+    bottom: 10%; */
     font-family: 'Industry';
     font-size: 1rem;
     height: 5vh;
@@ -571,3 +572,4 @@ fin de base */
     color: white;
     background-color: #6B6E70;
 }
+
