--- a/site/css/styles.css
+++ b/site/css/styles.css
@@ -19,9 +19,9 @@ sumar a la base */
 }
 
 html {
-    font-size: 100%;
-}
-
+    font-size: calc(10px + (14 - 10) * ((100vw - 200px) / (1024 - 200)));
+ }
+ 
 @import url('https://fonts.googleapis.com/css2?family=Quicksand:wght@300;500&display=swap');
 
 .contenedorBody{
