--- a/site/css/styles.css
+++ b/site/css/styles.css
@@ -574,7 +574,7 @@ fin de base */
 }
 .titlG{
     font-family: 'Industry';
-    font-size: 1.6rem;
+    font-size: 2rem;
     padding: 2%;
 }
 
@@ -610,6 +610,7 @@ fin de base */
     border: none;
     cursor: pointer;
     transition: 0.3s all;
+    margin: 1.5vh;
 }
 
 .btn--volver:hover{
@@ -617,6 +618,50 @@ fin de base */
     background-color: #6B6E70;
 }
 
+.cont__admin--titl{
+    padding-top: 4vh;
+    display: flex;
+    justify-content: center;
+    width: 90%;
 
+}
 
+.cont__admin--btn{
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: center;
+    height: 70vh;
+    padding-top: 10vh;
+}
 
+.cont__admin--btn{
+    width: 100%;
+    font-size:2rem;
+}
+
+.btn--adm{
+    /* position: absolute;
+    bottom: 10%; */
+    font-family: 'Industry';
+    font-size: 1.3rem;
+    height: 10vh;
+    width: 75%;
+    background-color:#cecece;
+    border: none;
+    cursor: pointer;
+    transition: 0.3s all;
+    margin: 1.5vh;
+}
+
+.btn--adm > *{
+    color: rgb(32, 32, 32);
+}
+
+.btn--adm:hover{
+    background-color: grey;
+}
+
+.btn--adm:hover >*{
+    color: white;
+}
