--- a/site/css/styles.css
+++ b/site/css/styles.css
@@ -243,6 +243,7 @@ FIN DEL MENU */
     font-size: 2rem;
     background-color:#222629;
     border-top: grey solid 1px;
+    font-family: 'Quicksand', sans-serif;
 }
 
 .imagenFooter {
