--- a/site/css/styles.css
+++ b/site/css/styles.css
@@ -150,6 +150,7 @@ flex:1;
 
 .buscador__formulario--input{
     font-size: 1.4rem;
+    width: 100%;
     margin-left: 4%;
     color: white;
     text-align: left;
