--- a/site/css/styles.css
+++ b/site/css/styles.css
@@ -393,7 +393,7 @@ fin de base */
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    width: 45vw;
+    width: 45%;
     padding:2% 2%;
 }
 
@@ -420,7 +420,7 @@ fin de base */
 .producto__info{
     font-family: 'Industry';
     font-size: 1rem;
-    width: 40vw;
+    width: 100%;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -903,7 +903,13 @@ fin de base */
 
     /* ESTILOS DE PÁGINA PRODUCTO */
 
-    .producto--img {
+    /* .producto--img {
         width: 30%;
-    }
+    } */
+        .cont__producto--pp{
+            width: 50%;
+        }
+    /* se podría modificar el contenedor de la imagen que
+    es el padre producto--img recién lo probé y va */
+
 }
