--- a/site/css/styles.css
+++ b/site/css/styles.css
@@ -699,7 +699,7 @@ fin de base */
     justify-content: flex-start;
     align-items: center;
     width: 90%;
-    height: 70vh;
+    padding-bottom: 4%;
 }
 
 .reg--input{
@@ -727,8 +727,6 @@ fin de base */
     border: none;
     cursor: pointer;
     transition: 0.4s all;
-    position: absolute;
-    bottom: 10%;
 }
 
 .reg--submit:hover{
@@ -955,5 +953,37 @@ fin de base */
     .cont__cant__agregar{
         width: 100%;
     }
+
+    .registro{
+        padding-bottom: 4%;
+        justify-content: space-evenly;
+        align-items: center;
+    }
+    .registrate{
+        flex:1;
+        text-align: center;
+    }
+
+    .link_log{
+        width: 20%;
+        padding-left: 0%;
+        flex: 1;
+        text-align: center;
+    }
+
+    .reg__form{
+        width: 40%;
+        
+    }
+
+    .reg--input{
+        font-size: .7rem;
+    }
+
+    .reg--submit{
+        margin-top: 10%;
+        font-size: 1rem;
+    }
+
 } 
  /* esta llave es clave */
