--- a/site/css/styles.css
+++ b/site/css/styles.css
@@ -932,7 +932,9 @@ fin de base */
     }
 
     .btn--cant{
-        font-size: 1rem;
+        font-size: 1.2rem;
+        width: 60%;
+        height: 7vh;
     }
 
     .btn--agregar{
