--- a/site/css/styles.css
+++ b/site/css/styles.css
@@ -173,6 +173,14 @@ flex:1;
     width: 3.6vh;
 }
 
+
+.buscadorModif{
+    align-self: flex-end;
+    width: 100%;
+    height: 6vh;
+    display: flex;
+}
+
 /* MENU BURGUER*/
 
 .menuHamburguesa{
@@ -999,6 +1007,11 @@ fin de base */
         margin-top: 10%;
         font-size: 1rem;
     }
+
+    .buscadorModif{
+        width: 50%;
+    }
+
 
 } 
  /* esta llave es clave */
