--- a/site/css/styles.css
+++ b/site/css/styles.css
@@ -876,7 +876,7 @@ fin de base */
 
     .btn--volver{
         height: 7vh;
-        width: 25%
+        width: 30%
     }
 
     .navBar__faq--carrito a{
@@ -1011,7 +1011,10 @@ fin de base */
     .buscadorModif{
         width: 50%;
     }
-
+    .cont__btn--volver{
+        padding-bottom: 0%;
+        margin: 6.5vh;
+    }
 
 } 
  /* esta llave es clave */
