--- a/site/css/styles.css
+++ b/site/css/styles.css
@@ -292,7 +292,6 @@ fin de base */
     background-size: 129%;
     background-position-x: 87%;
     background-position-y: 50%;
-    margin-bottom: 2vh;
 }
 
 .portada--titl{
@@ -328,7 +327,15 @@ fin de base */
     text-align: center;
     border-style: none;
     cursor: pointer;
+    -moz-appearance:none;
+    transition: .4s all;
 }
+
+.select--tcerveza:hover{
+    color: #61892F;
+    background-color: rgb(32, 32, 32);
+}
+
 
 .select--option{
     background-color: #222629;
@@ -336,25 +343,28 @@ fin de base */
     font-size: 1.2rem;
     color: #61892F;
     font-family: 'Industry';
+    flex:3;
 }
 
-.cont__venTodas{
+.cont__select__venTodas{
     display: flex;
     align-items: center;
     justify-content: space-around;
-    width: 90%;
-    height: 9vh;
+    width: 100%;
+    flex-wrap: wrap;
+    padding: 2%;
 }
 
 .btn--vent{
     font-family: 'Industry';
     font-size: .7rem;
-    width: 17vh;
+    width: 40%;
     color: #61892F;
     padding: 1%;
     background-color: #222629;
     border: none;
     cursor: pointer;
+    margin-top: 2%;
     transition: 0.3s all;
 }
 
@@ -962,14 +972,28 @@ fin de base */
         font-size: .7rem;
     }
 
+    .cont__select__venTodas{
+        justify-content: center;
+        align-items: center;
+    }
+
     .btn--vent{
-        width:20%
+        width:18%;
+        margin-top: 0%;
+    }
+
+    .btn--vent:nth-child(3){
+        order: 2;
     }
 
     .select--tcerveza{
         height: 9vh;
         font-size: .8rem;
+        width: 60%;
+        order: 2;
+        margin: 1%;
     }
+
     .section--titl{
         height: 8vh;
     }
