--- a/site/css/styles.css
+++ b/site/css/styles.css
@@ -491,7 +491,7 @@ fin de base */
 
 .cont__cantidad{
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
     align-items: center;
     justify-content: space-between;
     padding-bottom: 1vh;
@@ -830,9 +830,11 @@ fin de base */
 
     .linksMenu--a{
         padding-bottom: 0%;
-        width: 20%;
+        width: 23%;
         transition: none;
         text-align: center;
+        font-family: 'Quicksand';
+        font-size: .8rem;
     }
  
     .linksMenu--a:nth-child(1){
@@ -971,8 +973,8 @@ fin de base */
 
     .btn--cant{
         font-size: 1.6rem;
-        width: 60%;
-        height: 7vh;
+        width: 100%;
+        height: 80%;
     }
 
     .btn--cant:nth-child(2){
@@ -1011,20 +1013,19 @@ fin de base */
     }
 
     .cont__cantidad {
-        width: 30%;
         flex-wrap: wrap;
         justify-content: space-evenly;
     }
 
     .btn--cant {
-        font-size: 0.8rem;
-        width: 18%;
-        height: 8vh;
+        font-size: 1.2rem;
+        width: 7vh;
+        height: 7vh;
 
     }
 
     .btn--agregar {
-        font-size: 0.8rem;
+        font-size: 0.7rem;
         width: 80%;
     }
 
